[package]
name = "banner_bot"
version = "0.1.0"
authors = ["Andre Julius <noromoron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"

futures = "0.3.13"
futures-util = "0.3.13"
rand = "0.8.3"
tokio = { version = "1.4", features = ["full"] }
tokio-stream = "0.1.5"
tokio-util = { version = "0.6.5", features = ["full"] }

serenity = { version = "0.10", features = [
    "builder",
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
], git = "https://github.com/Lakelezz/serenity", branch = "update-editguild" }

image = "0.23"
reqwest = "0.11"
base64 = "0.13"
