[package]
name = "banner_bot"
version = "0.1.0"
authors = ["Andre Julius <noromoron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
dotenv = "^0.15.0"
tracing = "^0.1.26"
tracing-subscriber = "^0.2.18"

futures = "^0.3.14"
futures-util = "^0.3.14"
rand = "^0.8.3"
tokio = { version = "^1.5.0", features = ["full"] }
tokio-stream = "^0.1.5"
tokio-util = { version = "0.6.6", features = ["full"] }

serenity = { version = "^0.10", features = [
    "builder",
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
] }

image = "^0.23.14"
reqwest = "^0.11.3"
base64 = "^0.13.0"
dashmap = "^4.0"

anyhow = "1.0.40"
thiserror = "1.0.24"
